// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gets intersection of more than two arrays 1`] = `
Array [
  "c",
]
`;

exports[`gets intersection of two arrays 1`] = `
Array [
  "b",
  "c",
]
`;
